update nav bar home and query for infinite scrolling
